# ComputeGraphic

./: CMakeLists.txt  README.md
ComputeGraphic/src/: main.cpp
Global/include/: Global.h
Quater/: CMakeLists.txt
Quater/include/: algorithm.h  hpb.h  matrix.h  quater.h
Quater/src/: algorithm.cpp  hpb.cpp  matrix.cpp  quater.cpp
